name:                ue
version:             0.1.0.0
synopsis:            Universal command-line calculator program
homepage:            https://github.com/nzentzis/ue
license:             MIT
license-file:        LICENSE
author:              Noah Zentzis
maintainer:          nzentzis@gmail.com
copyright:           (c) 2017 Noah Zentzis
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable ue
  main-is: Main.hs
  build-depends:
    base          >=4.9     && <4.10,
    parsec        >=3.1.11  && <3.2,
    transformers  >=0.5.4.0 && <0.6,
    lens          >=4.15.2  && <4.16,
    QuickCheck    >=2.9.2   && <2.10,
    vty           >=5.15.1  && <5.16 
  hs-source-dirs: src
  default-language: Haskell2010

test-suite symbolic-reduction
  default-language: Haskell2010
  type: detailed-0.9
  hs-source-dirs: src
  test-module: Math.Rewrite.Test
  other-modules:
    Data.Expression
    Data.Units.Types
    Data.Units.MKS
    Data.Units.Definition
    Data.Units
    Data.Display
    Math.Rewrite
    Math.Rewrite.Engine
    Math.Approximate
  build-depends:
    Cabal,
    base >=4.9 && <4.10,
    parsec >=3.1.11 && <3.2,
    transformers >=0.5.4.0 && <0.6,
    lens >=4.15.2 && <4.16,
    QuickCheck >= 2.9.2 && <2.10
